ajustes para links relativos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -256,7 +256,7 @@
 
         <div class="col-b">
           <img
-            src="assets/Foto1.png"
+            src="./assets/Foto1.png"
             alt="Mulher vestindo moletom verde com as duas mãos no peito e sorrindo"
           />
         </div>
@@ -466,7 +466,7 @@
         </div>
 
         <div class="col-b">
-          <img src="assets/Pic.png" alt="Doutor feliz" />
+          <img src="./assets/Pic.png" alt="Doutor feliz" />
         </div>
       </div>
     </section>
@@ -558,7 +558,7 @@
         </div>
         <div class="col-b">
           <img
-            src="assets/homem.png"
+            src="./assets/homem.png"
             alt="Homem com moletom bege mexendo no celular e sorrindo"
           />
         </div>
@@ -739,6 +739,6 @@
 
     <!-- ScrollReaveal Lib -->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
